fixed container overflowing

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -56,7 +56,7 @@
 .main-content {
     background-color: $color-grey-light-3;
     border-bottom-right-radius: 3px;
-    height: 64.9rem;
+    height: 60.1rem;
     flex: 1;
 
     @include respond(tab-land) {
